updates to cipher