@@ -1,8 +1,8 @@
 package fi.jukkakorhonen.cipher.encryption;
 
-import java.io.IOException;
 import java.security.InvalidKeyException;
 import java.security.NoSuchAlgorithmException;
+import java.util.Base64;
 
 import javax.crypto.BadPaddingException;
 import javax.crypto.Cipher;
@@ -10,10 +10,8 @@ import javax.crypto.IllegalBlockSizeException;
 import javax.crypto.NoSuchPaddingException;
 import javax.crypto.spec.SecretKeySpec;
 
-import fi.jukkakorhonen.exception.CipherException;
-import sun.misc.BASE64Decoder;
+import fi.jukkakorhonen.exception.CipherException; 
 
-@SuppressWarnings("restriction")
 public class Decrypter {
 	
 	/**
@@ -29,10 +27,10 @@ public class Decrypter {
         try {
         	Cipher cipher = Cipher.getInstance("Blowfish");
 			cipher.init(Cipher.DECRYPT_MODE, secretKeySpec);
-		    byte[] bytes = cipher.doFinal(new BASE64Decoder().decodeBuffer(stringToDecrypt));
+		    byte[] bytes = cipher.doFinal(Base64.getDecoder().decode(stringToDecrypt));
 		    return new String(bytes);
 		} catch (InvalidKeyException | IllegalBlockSizeException | 
-				BadPaddingException | IOException | NoSuchAlgorithmException | 
+				BadPaddingException | NoSuchAlgorithmException | 
 				NoSuchPaddingException e) {
 			throw new CipherException(e, "Cannot decrypt file");
 		}
