@@ -2,6 +2,7 @@ package fi.jukkakorhonen.cipher.encryption;
 
 import java.security.InvalidKeyException;
 import java.security.NoSuchAlgorithmException;
+import java.util.Base64;
 
 import javax.crypto.BadPaddingException;
 import javax.crypto.Cipher;
@@ -10,7 +11,6 @@ import javax.crypto.NoSuchPaddingException;
 import javax.crypto.spec.SecretKeySpec;
 
 import fi.jukkakorhonen.exception.CipherException;
-import sun.misc.BASE64Encoder;
 
 public class Encrypter {
 
@@ -22,7 +22,6 @@ public class Encrypter {
 	 * @return encrypted String
 	 * @throws Exception
 	 */
-	@SuppressWarnings("restriction")
 	public static String encrypt(String key, String stringToEncrypt) throws CipherException {
 		try {
 			byte[] keyData = key.getBytes();
@@ -30,7 +29,7 @@ public class Encrypter {
 			Cipher cipher = Cipher.getInstance("Blowfish");
 			cipher.init(Cipher.ENCRYPT_MODE, secretKeySpec);
 			byte[] bytes = cipher.doFinal(stringToEncrypt.getBytes());
-			return new BASE64Encoder().encode(bytes);
+			return Base64.getEncoder().encodeToString(bytes);
 		} catch (IllegalArgumentException | InvalidKeyException | IllegalBlockSizeException | 
 				BadPaddingException | NoSuchAlgorithmException | NoSuchPaddingException e) {
 			throw new CipherException(e, "Cannot encrypt file");
